--- a/app/src/main/res/layout/activity_create_new_account.xml
+++ b/app/src/main/res/layout/activity_create_new_account.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="thememeteam.com.yummycrummyapp5.CreateNewAccount"
     android:id="@+id/createNewAccount">
-
+<!--lskghdgh-->
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
