--- a/app/src/main/res/layout/activity_login_.xml
+++ b/app/src/main/res/layout/activity_login_.xml
@@ -16,7 +16,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
+    <!--lskghdgh-->
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
