--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -57,7 +57,7 @@
         android:layout_alignLeft="@+id/genderField"
         android:layout_alignStart="@+id/genderField"
         android:layout_marginLeft="36dp" />
-    <!--lskghdgh-->
+    <!--lskghdg-->
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
